add api key authentication

--- a/WappuApi/appsettings.json
+++ b/WappuApi/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Data Source=database.sqlite"
+  },
+  "ApiKey": {
+    "Default": ""
   }
 }
